pushing fix for sticky menu on ios

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -569,7 +569,7 @@ i.fab.fa-staylinked {
 }
 #jumplinks {
     padding: 10px;
-	position: webkit-sticky;
+	position: -webkit-sticky;
 	position: sticky;
     top: 0;
     background-color: #efefef;
